Minor fixes
Fixed bug in generated PDFs where date on 1st evaluation form of each
page is also used on the 2nd form (instead of 2nd form's date);
Increased maximum number of lines displayed in comments section of
evaluation forms to 10 (previous - 5);
Increased margin-top in superadmin's year and semester view because the
current year and sem message is clipped at the top

--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -337,11 +337,11 @@ ul.unstyled {
 .evaluation-forms .evaluation-form .content .comments .contents span {
 	display: block;
 	border-bottom: 1px solid black;
+	font-size: 2vmin;
 	font-weight: normal;
 	margin-top: 2px;
 	padding: 3px;
-
-	max-height: 66px;
+	max-height: 132px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
